table_3/results/ButterKnife-pre-nullaway-ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldTypefaceBinding.java:3: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ButterKnifeProcessor.java:83: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ResourceBinding.java:4: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/Id.java:6: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/BindingSet.java:37: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldResourceBinding.java:10: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ViewBinding.java:11: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldCollectionViewBinding.java:9: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldViewBinding.java:6: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/MemberViewBinding.java:3: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/MethodViewBinding.java:6: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/Parameter.java:4: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldDrawableBinding.java:8: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldAnimationBinding.java:5: error: package android.support.annotation does not exist
import android.support.annotation.Nullable;
                                 ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ButterKnifeProcessor.java:141: error: cannot find symbol
    @Nullable
     ^
  symbol:   class Nullable
  location: class ButterKnifeProcessor
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ButterKnifeProcessor.java:807: error: cannot find symbol
    @Nullable()
     ^
  symbol:   class Nullable
  location: class ButterKnifeProcessor
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ButterKnifeProcessor.java:830: error: cannot find symbol
    @Nullable()
     ^
  symbol:   class Nullable
  location: class ButterKnifeProcessor
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ButterKnifeProcessor.java:1143: error: cannot find symbol
    @Nullable()
     ^
  symbol:   class Nullable
  location: class ButterKnifeProcessor
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/BindingSet.java:644: error: cannot find symbol
        @Nullable
         ^
  symbol:   class Nullable
  location: class Builder
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ViewBinding.java:81: error: cannot find symbol
        @Nullable
         ^
  symbol:   class Nullable
  location: class Builder
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ViewBinding.java:19: error: cannot find symbol
    @Nullable
     ^
  symbol:   class Nullable
  location: class ViewBinding
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/BindingSet.java:90: error: cannot find symbol
    @Nullable
     ^
  symbol:   class Nullable
  location: class BindingSet
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldTypefaceBinding.java:28: error: cannot find symbol
        @Nullable()
         ^
  symbol:   class Nullable
  location: class TypefaceStyles
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ResourceBinding.java:13: error: cannot find symbol
    boolean requiresResources(@Nullable() int sdk);
                               ^
  symbol:   class Nullable
  location: interface ResourceBinding
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/ResourceBinding.java:15: error: cannot find symbol
    CodeBlock render(@Nullable() int sdk);
                      ^
  symbol:   class Nullable
  location: interface ResourceBinding
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/butterknife-ann-pre/src/src/main/java/butterknife/compiler/FieldDrawableBinding.java:33: error: cannot find symbol
    public boolean requiresResources(@Nullable() int sdk) {
                                      ^
  symbol:   class Nullable
  location: class FieldDrawableBinding
26 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 431ms
26
